--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
   </div>
 
-  <div id="about" class="about-us section">
+  <div id="about" class="contact-us section">
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
@@ -119,7 +119,10 @@
               <div class="col-lg-6">
                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
                   <div class="icon">
-                    <img src="assets/images/vision-icon.png" alt="vision">
+                    <!-- <img src="assets/images/vision-icon.png" alt="vision"> -->
+                    <i class="fas fa-bullseye"></i>    <!-- Target (Mission) -->
+                    <i class="fas fa-rocket"></i>      <!-- Rocket (Mission) -->
+
                   </div>
                   <div class="right-text">
                     <h4>Our Vision</h4>
@@ -130,7 +133,10 @@
               <div class="col-lg-6">
                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
                   <div class="icon">
-                    <img src="assets/images/mission-icon.png" alt="mission">
+                    <!-- <img src="assets/images/mission-icon.png" alt="mission"> -->
+                    <i class="fas fa-eye"></i>          <!-- Eye (Vision) -->
+                    <i class="fas fa-binoculars"></i>   <!-- Binoculars (Vision) -->
+
                   </div>
                   <div class="right-text">
                     <h4>Our Mission</h4>
